; ModuleID = '/home/carl/AnghaBench/freebsd/sys/i386/linux/extr_linux_sysvec.c_linux_get_machine.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/i386/linux/extr_linux_sysvec.c_linux_get_machine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cpu_class = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"i686\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"i586\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"i486\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"i386\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**)* @linux_get_machine to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @linux_get_machine(i8** %0) #0 {
  %2 = alloca i8**, align 8
  store i8** %0, i8*** %2, align 8
  %3 = load i32, i32* @cpu_class, align 4
  switch i32 %3, label %10 [
    i32 128, label %4
    i32 129, label %6
    i32 130, label %8
  ]

4:                                                ; preds = %1
  %5 = load i8**, i8*** %2, align 8
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  br label %12

6:                                                ; preds = %1
  %7 = load i8**, i8*** %2, align 8
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8** %7, align 8
  br label %12

8:                                                ; preds = %1
  %9 = load i8**, i8*** %2, align 8
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8** %9, align 8
  br label %12

10:                                               ; preds = %1
  %11 = load i8**, i8*** %2, align 8
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i8** %11, align 8
  br label %12

12:                                               ; preds = %10, %8, %6, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
